--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,7 @@ jobs:
       
       # Step 3: Upload the 'docs' folder as the Pages artifact
       - name: Upload artifact
-        uses: actions/upload-artifact@v4
-
+        uses: actions/upload-pages-artifact@v2
         with:
           path: ./docs
       
