--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,5 @@
-# .github/workflows/deploy.yml
 name: Deploy to GitHub Pages
 
-# This workflow runs when there is a push to the main branch
 on:
   push:
     branches: [main]
@@ -13,19 +11,19 @@ jobs:
       pages: write
       id-token: write
     steps:
-      # Step 1: Checkout the repository
-      - uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v4
       
-      # Step 2: Configure GitHub Pages
       - name: Setup Pages
         uses: actions/configure-pages@v3
       
-      # Step 3: Upload the 'docs' folder as the Pages artifact
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
           path: ./docs
+          artifact_name: github-pages  # explicitly name the artifact
       
-      # Step 4: Deploy the Pages site
       - name: Deploy
         uses: actions/deploy-pages@v2
+        with:
+          artifact_name: github-pages  # tell deploy step which artifact to use
