--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,21 +16,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3  # Use v3 explicitly
       
       - name: Setup Pages
         uses: actions/configure-pages@v3
       
-      # Optional: Debug step to confirm the 'docs' folder exists
+      # Debug step to check contents of 'docs'
       - name: List 'docs' Directory
         run: ls -la docs
       
       - name: Upload Pages Artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-artifact@v3  # Explicitly using v3
         with:
           path: docs
-          artifact_name: github-pages
-      
+          name: github-pages  # Ensure artifact name matches
+
       - name: Deploy Pages
         uses: actions/deploy-pages@v2
         with:
