--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,10 +26,11 @@ jobs:
         run: ls -la docs
       
       - name: Upload Pages Artifact
-        uses: github.com/actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: github-pages
           path: docs
+
 
 
       - name: Deploy Pages
