--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to GitHub Pagesv1
+name: Deploy to GitHub Pages
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:  # Allows manual triggering of the workflow
 
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
@@ -16,22 +16,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v3  
-      
+        uses: actions/checkout@v4
+
       - name: Setup Pages
         uses: actions/configure-pages@v3
 
-      - name: Debug - List 'docs' Directory
+      - name: List 'docs' Directory (Debugging)
         run: ls -la docs
 
-      - name: Upload Pages Artifact
-        uses: actions/upload-pages-artifact@v2  # ✅ Use GitHub Pages artifact uploader
+      - name: Publish to GitHub Pages (Commit & Push)
+        uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          path: docs
-
-      - name: Debug - List Artifacts
-        run: |
-          ls -la ${{ runner.temp }}/_github_home/_work/_temp/
-
-      - name: Deploy Pages
-        uses: actions/deploy-pages@v2
+          commit_message: "Automated GitHub Pages deployment"
+          branch: main
+          file_pattern: docs/**
+          push_options: '--force'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
