--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
-# .github/workflows/ci.yml
 name: CI Pipeline
 
 # This workflow runs on every push or pull request
@@ -29,10 +28,14 @@ jobs:
       - name: Run tests
         run: pytest src/test_model.py
 
-      # Step 6: Update HTML Report
+      # Step 6: Ensure the assets directory exists
+      - name: Ensure assets directory exists
+        run: mkdir -p assets
+
+      # Step 7: Update HTML Report
       - name: Update HTML Report
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo "<html>
             <head><title>Model Report</title></head>
@@ -46,9 +49,8 @@ jobs:
               <p>This page is automatically generated from the model training process.</p>
             </body>
           </html>" > index.html
-
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add index.html
-          git commit -m "Update report with latest metrics"
+          git commit -m "Update report with latest metrics" || echo "No changes to commit"
           git push
