--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,5 +58,5 @@ jobs:
           commit_user_name: "GitHub Actions"
           commit_user_email: "actions@github.com"
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Use the default GITHUB_TOKEN
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}  # Use the default GITHUB_TOKEN
 
